@@ -1,11 +1,9 @@
 package mcjty.xnet.modules.facade;
 
-import net.minecraft.block.Block;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.Blocks;
 import net.minecraft.nbt.CompoundNBT;
-import net.minecraft.util.ResourceLocation;
-import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraft.nbt.NBTUtil;
 
 import javax.annotation.Nullable;
 
@@ -25,10 +23,9 @@ public class MimicBlockSupport {
 
 
     public void readFromNBT(CompoundNBT tagCompound) {
-        if (tagCompound.contains("regName")) {
-            String regName = tagCompound.getString("regName");
-            Block value = ForgeRegistries.BLOCKS.getValue(new ResourceLocation(regName));
-            if (value == null) {
+        if (tagCompound.contains("mimic")) {
+            mimicBlock = NBTUtil.readBlockState(tagCompound.getCompound("mimic"));
+            if (mimicBlock == null) {
                 mimicBlock = Blocks.COBBLESTONE.getDefaultState();
             }
         } else {
@@ -38,7 +35,8 @@ public class MimicBlockSupport {
 
     public void writeToNBT(CompoundNBT tagCompound) {
         if (mimicBlock != null) {
-            tagCompound.putString("regName", mimicBlock.getBlock().getRegistryName().toString());
+            CompoundNBT tag = NBTUtil.writeBlockState(mimicBlock);
+            tagCompound.put("mimic", tag);
         }
     }
 }
